--- a/static/css/base.css
+++ b/static/css/base.css
@@ -28,15 +28,18 @@ h1 {
     color: var(--dark-black);
     font-weight: var(--semibold);
     font-size: 32px;
-    padding: 16px 0;
+    padding: 16px 0 8px 0;
     margin: 0 auto;
+    text-align: center;
 }
 h2 {
     color: var(--off-black);
-    font-weight: var(--bold);
+    font-weight: var(--semibold);
     font-size: 24px;
     padding: 12px 0;
     margin: 0 auto;
+    line-height: 32px;
+    text-align: center;
 }
 h3 {
     color: var(--off-black);
@@ -44,6 +47,7 @@ h3 {
     font-size: 20px;
     padding: 8px 0;
     margin: 0 auto;
+    text-align: center;
 }
 /* Navigation bar styles */
 #nav-bar-container {
