--- a/listings/templates/listings/listing_create_form.html
+++ b/listings/templates/listings/listing_create_form.html
@@ -158,12 +158,14 @@
     <div class="form-section-cont">
       <label for="id_listing_excerpt">Short excerpt</label>
       {{listing_create_form.listing_excerpt}}
+      <div class="field-count" id="excerpt-length"></div>
       <div class="form-tip">
         <image alt="" src="{% static 'images/information_icon.svg' %}"></image>
           <span>The excerpt is a short description that appears in search results.          </span>
       </div>
       <label for="id_listing_description">Description</label>
       {{listing_create_form.listing_description}}
+      <div class="field-count" id="description-length"></div>
       <div class="form-tip">
         <image alt="" src="{% static 'images/information_icon.svg' %}"></image>
           <span>Buyers love a detailed description. A well written and informative description can lead to a better sale price and more potential buyers.</span>
@@ -190,4 +192,7 @@
     <button type="submit">Submit Form</button>
   </form>
 </main>
+{% endblock %}
+{% block footerscripts %}
+<script src="{% static 'javascript/create.js' %}"></script>
 {% endblock %}
