--- a/static/css/create.css
+++ b/static/css/create.css
@@ -46,7 +46,7 @@ form {
 input[type=text] {
     width: 100%;
     max-width: 340px;
-    font-size: 20px;
+    font-size: 16px;
     background-color: var(--form-field-bg-inactive);
     border: 2px solid var(--form-field-border-inactive);
     font-weight: var(--medium);
@@ -202,7 +202,7 @@ label {
 textarea {
     width: 100%;
     max-width: 340px;
-    font-size: 20px;
+    font-size: 16px;
     background-color: var(--form-field-bg-inactive);
     border: 2px solid var(--form-field-border-inactive);
     font-weight: var(--medium);
@@ -211,7 +211,8 @@ textarea {
     border-radius: 8px;
     box-sizing: border-box;
     resize:none;
-    height: 120px;
+    height: 180px;
+    font-family: proxima-nova, sans-serif, Arial;
 }
 textarea:focus {
     border: 2px solid var(--accent-colour);
@@ -236,4 +237,14 @@ textarea:focus {
     height: 24px;
     width: 24px;
     margin: 4px 8px 0 4px;
+}
+.field-char-count {
+    width: 100%;
+    max-width: 340px;
+    margin: 4px auto;
+    font-size: 12px;
+    font-style: italic;
+    color: var(--light-text-grey);
+    text-align: right;
+    font-size: 16px;
 }
