--- a/listings/templates/listings/listing_create_form.html
+++ b/listings/templates/listings/listing_create_form.html
@@ -11,7 +11,7 @@
     {% csrf_token %}
     {{ listing_create_form.condition }}
     {{ listing_create_form.boat_feature_list }}
-    {{ listing_create_form.category }}
+
     {{ listing_create_form.type }}
     {{ listing_create_form.tax_paid }}
     <h2>What kind of boat are you selling?</h2>
@@ -27,6 +27,10 @@
           <div class="radio-div-2">Sail</div>
         </label>
       </div>
+      <label for="id_hull_configuration">Hull Configuration</label>
+      {{ listing_create_form.hull_configuration }}
+      <label for="id_hull_category">Category</label>
+      {{ listing_create_form.category }}
       <h3>Condition</h3>
       <div class="radio-cont-2">
         <label for="used-radio">
@@ -99,6 +103,7 @@
           </div>
         </div>
       </div>
+    
       <label for="id_hull_material">Hull Material</label>
       {{ listing_create_form.hull_material }}
     </div>
@@ -189,10 +194,18 @@
     </div>
     <h2>Images</h2>
     <div class="form-section-cont">
+      {{ listing_create_form.category }}
       <label>Featured Image</label>
+      {{ listing_create_form.featured_image }}
       <div class="form-tip">
         <image alt="" src="{% static 'images/information_icon.svg' %}"></image>
           <span>This image will appear in search results, pick the best image of your boat and make a great first impression.</span>
+      </div>
+      <label>Images</label>
+      {{ listing_media_form.image }}
+      <div class="form-tip">
+        <image alt="" src="{% static 'images/information_icon.svg' %}"></image>
+          <span>Our users love lots of clear images. You can upload up to 20 images per listing.</span>
       </div>
     </div>
     <button type="submit">Submit Form</button>
